Fixed: Periodic table legend not visible against white background
Fixed: Beaker ticks and labels not visible against white background
# 0.00.109 (56641) Sep 17, 2011
Micro tab: Even if the value is being held constant, jump directly to zero if the true concentration becomes zero, so that if all particles flow out the drain, the displayed concentration of that solute will read 0
Macro tab: Fixed: On mac, the left margin in the Concentration box is too small when "show values" is checked.  The text starts running into the side of the box for Salt.
Water tab: Fixed: when Jmol is "loading," the background is still black
Water tab: Align the checkboxes in the "show" control panel
Micro tab: Use the same font for "Show in Periodic Table" as used for "Sugar in 3D"
# 0.00.108 (56620) Sep 16, 2011
Water tab: Removed the square frame from the mini-beaker
Water tab: Increased the size of the mini-beaker
Water tab: Changed JMol background color to light blue
Water tab: Renamed "Water charges" to "Water partial charges"
Water tab: Made "Sugar in 3D" have a yellow background
Micro tab: Changed "Show in Periodic Table" to have orange background and same font as other buttons
Water tab: Made salt bucket orange instead of blue to make it more visible against the background
Micro tab: Gray out the kit button nodes instead of making them invisible
Micro tab: Made the kit selection buttons orange
# 0.00.107 (56599) Sep 16, 2011
Micro tab: Decouple the bar charts from the true concentration.  Hold the display value constant while draining, and update according to a mix between the delta and the true value
# 0.00.106 (56553) Sep 14, 2011
# 0.00.105 (56545) Sep 14, 2011
Water tab: Made "Show water charges" the first option
Water tab: Labeled the control box as "Show"
Water tab: Removed the word "Show" from all controls in the "Show" control box