@@ -40,3 +40,6 @@ calciumChlorideCaCl2 = <html>Calcium Chloride<br>CaCl<sub>2</sub></html>
 sodiumNitrateNaNO3 = <html>Sodium Nitrate<br>NaNO<sub>3</sub></html>
 sucroseC12H22O11 = <html>Sucrose<br>C<sub>12</sub>H<sub>22</sub>O<sub>11</sub></html>
 glucoseC6H12O6 = <html>Glucose<br>C<sub>6</sub>H<sub>12</sub>O<sub>6</sub></html>
+spaceFill = Space fill
+ballAndStick = Ball and stick
+loading=Loading...
