@@ -1,3 +1,4 @@
+Water tab: Internationalized sugar 3d view
 Fixed: Periodic table legend not visible against white background
 Fixed: Beaker ticks and labels not visible against white background
 # 0.00.109 (56641) Sep 17, 2011
